# project_venus

./: .env.example  .gitignore  CHANGELOG.md  EMULATOR_SETUP.md  GITHUB_SETUP.md  LOCAL_ADB_SETUP.md  README.md  RUNPOD_SETUP.md  pyproject.toml  requirements.txt
config/: __init__.py  crawler_config.py  device_config.py  sample_config.py  ui_venus_config.py
scripts/: config_demo.py  crawler_demo.py  deploy_to_runpod.sh  fix_runpod_unzip.sh  local_crawler.py  runpod_crawler.py  simple_test.py  test_adbutils.py  test_emulator.py  test_runpod_setup.py  test_ui_venus_mac.py  ui_venus_demo.py  venus_crawler.py
src/automation/: action_executor.py  device_controller.py  screenshot_manager.py
src/crawler/: __init__.py  action_planner.py  coverage_tracker.py  crawler_engine.py  navigation_engine.py  state_analyzer.py
src/ui_venus/: __init__.py  action_suggester.py  element_detector.py  model_client.py
tests/: test_config.py
